# vstack

./: .env.local.example  .gitignore  AGENTS.md  README.md  vstack.toml
agents/: generalist.md  iced.md  reviewer-arch.md  reviewer-doc.md  reviewer-error.md  reviewer-perf.md  reviewer-safety.md  reviewer-security.md  reviewer-structure.md  reviewer-test.md  rust.md  tpm.md
cli/: Cargo.toml  build.rs
cli/src/: agent.rs  config.rs  frontmatter.rs  hook.rs  installer.rs  main.rs  mapping.rs  skill.rs
cli/src/commands/: add.rs  check.rs  init.rs  list.rs  mod.rs  refresh.rs  remove.rs  update.rs
cli/src/harness/: claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
cli/src/tui/: mod.rs  multiselect.rs  render.rs
hooks/: block-bare-cd.sh  post-commit-lsp-warn.sh  post-compact-lsp-warn.sh  post-edit-lint.sh  pre-commit-check.sh  task-completed-check.sh
skill-templates/: SKILL.md.template  pattern.md  reference.md  script.sh  workflow.md
skill-templates/rules/: _sections.md
skills/benchmarking/: AGENTS.md  README.md  SKILL.md
skills/decider/: AGENTS.md  README.md  SKILL.md
skills/github/: AGENTS.md  README.md  SKILL.md
skills/iced-rs/: AGENTS.md  README.md  SKILL.md
skills/issue-lifecycle/: AGENTS.md  README.md  SKILL.md
skills/linear/: AGENTS.md  README.md  SKILL.md
skills/orchestration/: AGENTS.md  README.md  SKILL.md
skills/perf-cache/: AGENTS.md  README.md  SKILL.md
skills/perf-ebpf/: AGENTS.md  README.md  SKILL.md
skills/perf-latency/: AGENTS.md  README.md  SKILL.md
skills/perf-lock-free/: AGENTS.md  README.md  SKILL.md
(+521 files in other folders)
