[package]
name = "vstack"
version = "0.9.0"
edition = "2024"
description = "CLI tool for installing vstack skills and agents across AI coding harnesses"
license = "MIT"

[dependencies]
# TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_28", "underline-color"] }
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Filesystem
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
dirs = "6"
